@@ -1,7 +1,7 @@
 requires "File::DataClass" => "v0.66.0";
 requires "Moo" => "2.000001";
 requires "Template" => "2.26";
-requires "Unexpected" => "v0.39.0";
+requires "Unexpected" => "v0.40.0";
 requires "namespace::autoclean" => "0.26";
 requires "perl" => "5.010001";
 
