@@ -6,7 +6,7 @@ namespace::autoclean = 0.26
 File::DataClass   = v0.66.0
 Moo               = 2.000001
 Template          = 2.26
-Unexpected        = v0.39.0
+Unexpected        = v0.40.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
